# Platforma-Content--OOP

./: CMakeLists.txt  main.cpp
controller/: Controller.cpp  List.cpp  Map.cpp  Set.cpp  Vector.cpp
controller/headers/: Controller.h  List.h  Map.h  Set.h  Vector.h
fisiere/: fisierFilme.txt  fisierImagini.txt  fisierScurtmetraje.txt  fisierSeriale.txt
model/: Film.cpp  Imagine.cpp  Jpeg.cpp  Png.cpp  Scurtmetraj.cpp  Serial.cpp
model/headers/: Film.h  Imagine.h  Jpeg.h  Png.h  Scurtmetraj.h  Serial.h
view/: UI.cpp
view/headers/: UI.h
